[gd_scene load_steps=29 format=3 uid="uid://dja6bmfabina8"]

[ext_resource type="Script" path="res://Player.gd" id="1_dlka7"]
[ext_resource type="Script" path="res://Controller.gd" id="1_dp755"]
[ext_resource type="Shader" path="res://background.gdshader" id="2_0au2u"]
[ext_resource type="Script" path="res://Ball.gd" id="2_7k3va"]
[ext_resource type="Shader" path="res://ball.gdshader" id="3_q41nu"]
[ext_resource type="Shader" path="res://paddle.gdshader" id="4_c2o4i"]
[ext_resource type="FontFile" uid="uid://cifl0linn51p4" path="res://Fonts/C&C Red Alert [INET].ttf" id="6_g42gb"]
[ext_resource type="Shader" path="res://background_particles.gdshader" id="6_lxl82"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nnq7y"]
shader = ExtResource("2_0au2u")

[sub_resource type="Gradient" id="Gradient_iv3bj"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.3, 0.5, 0.7, 1)
colors = PackedColorArray(0.338363, 0.169444, 0.12098, 1, 0.112359, 0.034617, 0.023797, 1, 0.0397413, 0.0415507, 0.0599592, 1, 0.0311515, 0.098546, 0.125805, 1, 0.11108, 0.25741, 0.311693, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_q6t72"]
gradient = SubResource("Gradient_iv3bj")
width = 9455

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ilgug"]
normal = Vector2(0, 1)
distance = 4.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_dsrbd"]
normal = Vector2(-0.999941, -0.0108689)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6p7p1"]
distance = -647.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_y1iu2"]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iilor"]
radius = 12.8423

[sub_resource type="CanvasTexture" id="CanvasTexture_okcl6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ba0d"]
shader = ExtResource("3_q41nu")
shader_parameter/u_hit = 1.0
shader_parameter/u_speed = 5.0

[sub_resource type="CanvasTexture" id="CanvasTexture_etpcu"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_pupgx"]
friction = 0.69

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uiife"]
size = Vector2(19.709, 135)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_enx35"]
shader = ExtResource("4_c2o4i")

[sub_resource type="CanvasTexture" id="CanvasTexture_gbv2l"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_k7qoq"]
friction = 0.69

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lqgmq"]
shader = ExtResource("4_c2o4i")

[sub_resource type="LabelSettings" id="LabelSettings_oho0p"]
font = ExtResource("6_g42gb")
font_size = 50

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_uan4m"]
normal = Vector2(1, -1.71883e-07)
distance = 8.31692e-08

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rm5ix"]
shader = ExtResource("6_lxl82")

[node name="Node2D" type="Node2D"]
position = Vector2(-2, -4)
script = ExtResource("1_dp755")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(577, 330)

[node name="Background" type="Sprite2D" parent="Camera2D"]
texture_filter = 2
material = SubResource("ShaderMaterial_nnq7y")
position = Vector2(2.82843, 7.99999)
rotation = 3.14159
scale = Vector2(0.121775, 656.072)
texture = SubResource("GradientTexture1D_q6t72")

[node name="topBorder" type="StaticBody2D" parent="."]
position = Vector2(0, 8)

[node name="topBorderCollider" type="CollisionShape2D" parent="topBorder"]
shape = SubResource("WorldBoundaryShape2D_ilgug")

[node name="rightBorder" type="StaticBody2D" parent="."]
position = Vector2(0, 8)

[node name="rightBorderCollider" type="CollisionShape2D" parent="rightBorder"]
position = Vector2(1151, 639)
shape = SubResource("WorldBoundaryShape2D_dsrbd")

[node name="bottomBorder" type="StaticBody2D" parent="."]

[node name="bottomBorderCollider" type="CollisionShape2D" parent="bottomBorder"]
position = Vector2(1154, 1)
shape = SubResource("WorldBoundaryShape2D_6p7p1")

[node name="Ball" type="RigidBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(638, 330)
mass = 0.02
physics_material_override = SubResource("PhysicsMaterial_y1iu2")
gravity_scale = 0.0
continuous_cd = 2
can_sleep = false
freeze = true
freeze_mode = 1
linear_damp_mode = 1
script = ExtResource("2_7k3va")
_max_angle = 0.9
_do_speed_increase = true
_speed_increase = 0.005

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_iilor")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
scale = Vector2(18.835, 16.369)
texture = SubResource("CanvasTexture_okcl6")

[node name="glow_1" type="Sprite2D" parent="Ball/Sprite2D"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.243137)
material = SubResource("ShaderMaterial_1ba0d")
rotation = 0.872665
scale = Vector2(2, 2)
texture = SubResource("CanvasTexture_etpcu")

[node name="glow_2" type="Sprite2D" parent="Ball/Sprite2D"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.243137)
material = SubResource("ShaderMaterial_1ba0d")
rotation = 0.261799
scale = Vector2(2, 2)
texture = SubResource("CanvasTexture_etpcu")

[node name="Player" type="RigidBody2D" parent="."]
position = Vector2(577, 336)
mass = 0.01
physics_material_override = SubResource("PhysicsMaterial_pupgx")
gravity_scale = 0.0
continuous_cd = 1
freeze = true
freeze_mode = 1
linear_velocity = Vector2(10, 0)
linear_damp_mode = 1
script = ExtResource("1_dlka7")
CPU_distance_to_action_modifier = 1.0
CPU_delay_chance = 50.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_uiife")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
material = SubResource("ShaderMaterial_enx35")
scale = Vector2(19.709, 135)
texture = SubResource("CanvasTexture_gbv2l")

[node name="Player2" type="RigidBody2D" parent="."]
position = Vector2(516, 335)
mass = 0.01
physics_material_override = SubResource("PhysicsMaterial_k7qoq")
gravity_scale = 0.0
continuous_cd = 1
freeze = true
freeze_mode = 1
linear_velocity = Vector2(10, 0)
linear_damp_mode = 1
script = ExtResource("1_dlka7")
_upKey = "w_key"
_downKey = "s_key"
CPU_distance_to_action_modifier = 100.0
CPU_delay_chance = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
shape = SubResource("RectangleShape2D_uiife")

[node name="Sprite2D" type="Sprite2D" parent="Player2"]
material = SubResource("ShaderMaterial_lqgmq")
scale = Vector2(19.709, 135)
texture = SubResource("CanvasTexture_gbv2l")

[node name="audio_stream" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true

[node name="Scoreboard" type="Label" parent="."]
offset_top = 27.0
offset_right = 1151.0
offset_bottom = 167.0
label_settings = SubResource("LabelSettings_oho0p")
horizontal_alignment = 1

[node name="leftBorder" type="StaticBody2D" parent="."]

[node name="leftBorderCollider" type="CollisionShape2D" parent="leftBorder"]
position = Vector2(0, 9)
shape = SubResource("WorldBoundaryShape2D_uan4m")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(528.206, 515.581)
process_material = SubResource("ShaderMaterial_rm5ix")
